Mejora en los cors. Correción en la validación de las fechas para la creación de evento, evitar que se pueda crear antes del día actual.